Fix small mobile scrollbar

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -22,10 +22,6 @@
 // color the sidebars darker than main content area
 // --------------------------------------------------
 @include media-breakpoint-down(sm) {
-  .td-outer {
-    padding-left: 0;
-    padding-right: 0;
-  }
   .td-sidebar {
     background-color: $td-sidebar-bg-color;
   }
